# ic-jury

./: Cargo.toml  README.md  canister_ids.json  dfx.json  jury.did  makefile
src/: main.rs
src/declarations/jury/: index.d.ts  index.js  jury.did.d.ts  jury.did.js
tests/: package-lock.json  package.json  tests.js
