[package]
name = "jury"
version = "0.1.0"
authors = ["John Plevyak <jplevyak@gmail.com>"]
edition = "2021"

[dependencies]
candid = "0.9"
hex = "0.4"
ic-certified-map = "0.4"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-stable-structures = "0.5"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
rand = { version ="*", default-features = false, features=["alloc"] }
rand_core = { version = "*", default-features = false }
rand_chacha = { version = "*", default-features = false }
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.10"

[profile.release]
debug = false
lto = true
opt-level = 'z'
